Fixed issue where padding at bottom of page was adding white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ html {
 
 main {
   background-color: rgb(15, 15, 15);
+  padding-bottom: 2rem;
 }
 
 .hidden {
